BE-40-45: add analytics and insights reporting
